--- a/TayQuiz/src/app/emoji-quiz/emoji-quiz.page.html
+++ b/TayQuiz/src/app/emoji-quiz/emoji-quiz.page.html
@@ -6,23 +6,15 @@
   </ion-header>
 
   <ion-text color="secondary" style="text-align: center">
-    <h2>🚂🏠💔🎉🌊</h2>
+    <h2>{{currentQuestion?.question}}</h2>
   </ion-text>
 
   <ion-list>
-    <ion-item (click)="verify('1')">
-      <ion-label>Dress</ion-label>
-    </ion-item>
-    <ion-item (click)="verify('2')">
-      <ion-label>The Last Great American Dynasty</ion-label>
-    </ion-item>
-    <ion-item (click)="verify('3')">
-      <ion-label>Sparks Fly</ion-label>
-    </ion-item>
-    <ion-item (click)="verify('4')">
-      <ion-label>Karma</ion-label>
+    <ion-item *ngFor="let answer of currentQuestion?.answers; let idx = index" (click)="verify(answer.correct)">
+      <ion-label>{{ answer.answer }}</ion-label>
     </ion-item>
   </ion-list>
 
+  <ion-button (click)="nextQuestion()">Next Question</ion-button>
   <ion-button (click)="navigateHome()">End</ion-button>
 </ion-content>
