slightly less ugly

--- a/TayQuiz/src/app/home/home.page.html
+++ b/TayQuiz/src/app/home/home.page.html
@@ -1,6 +1,11 @@
 <ion-content [fullscreen]="true">
-  TayQuiz PoC
+
   <div id="container">
+    <ion-text color="primary" style="text-align: center">
+      <h1>TayQuiz 💃🏽</h1>
+      <p>it's just a test</p>
+      <br>
+    </ion-text>
     <ion-button (click)="navigateToEmojiQuiz()">Start</ion-button>
   </div>
 </ion-content>
