--- a/TayQuiz/src/app/emoji-quiz/emoji-quiz.page.html
+++ b/TayQuiz/src/app/emoji-quiz/emoji-quiz.page.html
@@ -1,20 +1,19 @@
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">emoji-quiz</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div id="container">
+    <ion-text color="secondary" style="text-align: center">
+      <h2>{{currentQuestion?.question}}</h2>
+    </ion-text>
 
-  <ion-text color="secondary" style="text-align: center">
-    <h2>{{currentQuestion?.question}}</h2>
-  </ion-text>
+    <br>
+    <ion-list>
+      <ion-item *ngFor="let answer of currentQuestion?.answers; let idx = index" (click)="verify(answer.correct)">
+        <ion-label>{{ answer.answer }}</ion-label>
+      </ion-item>
+    </ion-list>
 
-  <ion-list>
-    <ion-item *ngFor="let answer of currentQuestion?.answers; let idx = index" (click)="verify(answer.correct)">
-      <ion-label>{{ answer.answer }}</ion-label>
-    </ion-item>
-  </ion-list>
-
-  <ion-button (click)="nextQuestion()">Next Question</ion-button>
-  <ion-button (click)="navigateHome()">End</ion-button>
+    <br>
+    <br>
+    <ion-button (click)="nextQuestion()">Next Question</ion-button>
+    <ion-button (click)="navigateHome()">End</ion-button>
+  </div>
 </ion-content>
