added version number YEAR.MONTHDAY.TIME (the format is necessary to comply with semver2)

--- a/TayQuiz/src/app/home/home.page.html
+++ b/TayQuiz/src/app/home/home.page.html
@@ -3,7 +3,7 @@
   <div id="container">
     <ion-text color="primary" style="text-align: center">
       <h1>TayQuiz 💃🏽</h1>
-      <p>it's just a test</p>
+      <p>{{environment.appVersion}}</p>
       <br>
     </ion-text>
     <ion-button (click)="navigateToEmojiQuiz()">Start</ion-button>
