added simple favicon and moved version number to bottom right corner

--- a/TayQuiz/src/app/home/home.page.html
+++ b/TayQuiz/src/app/home/home.page.html
@@ -3,9 +3,12 @@
   <div id="container">
     <ion-text color="primary" style="text-align: center">
       <h1>TayQuiz 💃🏽</h1>
-      <p>{{environment.appVersion}}</p>
+      <p>made with ♡ by xtwin & u47552</p>
       <br>
     </ion-text>
     <ion-button (click)="navigateToEmojiQuiz()">Start</ion-button>
+  </div>
+  <div style="position: absolute; bottom: 0; right: 1rem; font-size: 12px">
+    <p>Version {{environment.appVersion}}</p>
   </div>
 </ion-content>
