--- a/TayQuiz/src/app/emoji-quiz/emoji-quiz.page.html
+++ b/TayQuiz/src/app/emoji-quiz/emoji-quiz.page.html
@@ -7,6 +7,7 @@
       </ion-text>
 
       <br>
+      <!--<ion-searchbar search-icon="musical-notes-outline" (ionInput)="searchSongs($event)"></ion-searchbar>-->
       <ion-list>
         <ion-item *ngFor="let answer of currentQuestion?.answers; let idx = index" (click)="verify(answer.correct)">
           <ion-label>{{ answer.answer }}</ion-label>
